--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
     <ul class="navbar-nav ml-auto pr-5">
 
       <li class="nav-item">
-        <a class="nav-link" href="/">Overview</a>
+        <a class="nav-link" href="">Overview</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/fish">Fish</a>
+        <a class="nav-link" href="fish">Fish</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/bugs">Bugs</a>
+        <a class="nav-link" href="bugs">Bugs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/fossils">Fossils</a>
+        <a class="nav-link" href="fossils">Fossils</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tools">Settings</a>
+        <a class="nav-link" href="tools">Settings</a>
       </li>
       </li>
 
@@ -420,9 +420,9 @@
       <div class="home-nav-container">
 
         <div class="row h-100 home-nav">
-          <div class="col-12 col-lg home-nav-btn-container"><a href="/fish"><div class="home-nav-btn"><div class="home-nav-btn-txt">Fish</div></div></a></div>
-          <div class="col-12 col-lg home-nav-btn-container"><a href="/bugs"><div class="home-nav-btn"><div class="home-nav-btn-txt">Bugs</div></div></a></div>
-          <div class="col-12 col-lg home-nav-btn-container"><a href="/fossils"><div class="home-nav-btn"><div class="home-nav-btn-txt">Fossils</div></div></a></div>
+          <div class="col-12 col-lg home-nav-btn-container"><a href="fish"><div class="home-nav-btn"><div class="home-nav-btn-txt">Fish</div></div></a></div>
+          <div class="col-12 col-lg home-nav-btn-container"><a href="bugs"><div class="home-nav-btn"><div class="home-nav-btn-txt">Bugs</div></div></a></div>
+          <div class="col-12 col-lg home-nav-btn-container"><a href="fossils"><div class="home-nav-btn"><div class="home-nav-btn-txt">Fossils</div></div></a></div>
         </div>
 
       </div>
