--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
       <div class="home-nav-container">
 
         <div class="row h-100 home-nav">
-          <div class="col-12 col-lg home-nav-btn-container"><a href="fish"><div class="home-nav-btn"><div class="home-nav-btn-txt">Fish</div></div></a></div>
-          <div class="col-12 col-lg home-nav-btn-container"><a href="bugs"><div class="home-nav-btn"><div class="home-nav-btn-txt">Bugs</div></div></a></div>
-          <div class="col-12 col-lg home-nav-btn-container"><a href="fossils"><div class="home-nav-btn"><div class="home-nav-btn-txt">Fossils</div></div></a></div>
+          <div class="col-12 col-lg home-nav-btn-container"><a href="/acnh/fish"><div class="home-nav-btn"><div class="home-nav-btn-txt">Fish</div></div></a></div>
+          <div class="col-12 col-lg home-nav-btn-container"><a href="/acnh/bugs"><div class="home-nav-btn"><div class="home-nav-btn-txt">Bugs</div></div></a></div>
+          <div class="col-12 col-lg home-nav-btn-container"><a href="/acnh/fossils"><div class="home-nav-btn"><div class="home-nav-btn-txt">Fossils</div></div></a></div>
         </div>
 
       </div>
