--- a/fish/index.html
+++ b/fish/index.html
@@ -9,10 +9,10 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="/resources/main.css">
-  <link id="animcss" rel="stylesheet" href="/resources/animate.cssx">
-  <link rel="stylesheet" href="/resources/animsition/dist/css/animsition.min.css">
-  <link href="/resources/icons/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="../resources/main.css">
+  <link id="animcss" rel="stylesheet" href="../resources/animate.cssx">
+  <link rel="stylesheet" href="../resources/animsition/dist/css/animsition.min.css">
+  <link href="../resources/icons/css/all.css" rel="stylesheet">
 
   <!-- Jquery -->
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
@@ -20,9 +20,9 @@
   <!-- JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="/bootstrap/js/bootstrap.js"></script>
-  <script src="/resources/animsition//dist/js/animsition.min.js"></script>
-  <script src="/resources/main.js"></script>
-  <script src="/resources/scroll.js"></script>
+  <script src="../resources/animsition//dist/js/animsition.min.js"></script>
+  <script src="../resources/main.js"></script>
+  <script src="../resources/scroll.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700&display=swap" rel="stylesheet"> 
@@ -35,7 +35,7 @@
   <!-- Navbar Logo -->
   <a class="navbar-brand pl-4" href="#">
     <div class="navbar-brand-offset">
-      <img src="/resources/logo.png" width="33" height="33" class="d-inline-block align-top" alt="">
+      <img src="../resources/logo.png" width="33" height="33" class="d-inline-block align-top" alt="">
       NH:Notes
     </div>
   </a>
