--- a/fish/index.html
+++ b/fish/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="icon" href="resources/logo.png">
+  <link rel="icon" href="../resources/logo.png">
   <title>Fish | NH:Notes</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../resources/main.css">
   <link id="animcss" rel="stylesheet" href="../resources/animate.cssx">
   <link rel="stylesheet" href="../resources/animsition/dist/css/animsition.min.css">
@@ -19,7 +19,7 @@
 
   <!-- JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="/bootstrap/js/bootstrap.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <script src="../resources/animsition//dist/js/animsition.min.js"></script>
   <script src="../resources/main.js"></script>
   <script src="../resources/scroll.js"></script>
