--- a/fish/index.html
+++ b/fish/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="icon" href="../resources/logo.png">
+  <link rel="icon" href="/acnh/resources/logo.png">
   <title>Fish | NH:Notes</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../resources/main.css">
-  <link id="animcss" rel="stylesheet" href="../resources/animate.cssx">
-  <link rel="stylesheet" href="../resources/animsition/dist/css/animsition.min.css">
-  <link href="../resources/icons/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="/acnh/resources/main.css">
+  <link id="animcss" rel="stylesheet" href="/acnh/resources/animate.cssx">
+  <link rel="stylesheet" href="/acnh/resources/animsition/dist/css/animsition.min.css">
+  <link href="/acnh/resources/icons/css/all.css" rel="stylesheet">
 
   <!-- Jquery -->
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
@@ -20,9 +20,9 @@
   <!-- JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <script src="../resources/animsition//dist/js/animsition.min.js"></script>
-  <script src="../resources/main.js"></script>
-  <script src="../resources/scroll.js"></script>
+  <script src="/acnh/resources/animsition//dist/js/animsition.min.js"></script>
+  <script src="/acnh/resources/main.js"></script>
+  <script src="/acnh/resources/scroll.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700&display=swap" rel="stylesheet"> 
@@ -35,7 +35,7 @@
   <!-- Navbar Logo -->
   <a class="navbar-brand pl-4" href="#">
     <div class="navbar-brand-offset">
-      <img src="../resources/logo.png" width="33" height="33" class="d-inline-block align-top" alt="">
+      <img src="/acnh/resources/logo.png" width="33" height="33" class="d-inline-block align-top" alt="">
       NH:Notes
     </div>
   </a>
@@ -44,20 +44,19 @@
     <ul class="navbar-nav ml-auto pr-5">
 
       <li class="nav-item">
-        <a class="nav-link" href="/">Overview</a>
+        <a class="nav-link" href="/acnh">Overview</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/fish">Fish</a>
+        <a class="nav-link" href="/acnh/fish">Fish</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/bugs">Bugs</a>
+        <a class="nav-link" href="/acnh/bugs">Bugs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/fossils">Fossils</a>
+        <a class="nav-link" href="/acnh/fossils">Fossils</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tools">Settings</a>
-      </li>
+        <a class="nav-link" href="/acnh/tools">Settings</a>
       </li>
 
     </ul>
